Made things more awesomer - V3

--- a/SimpleFeedReader/SimpleFeedReader.csproj
+++ b/SimpleFeedReader/SimpleFeedReader.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>4bcd2092-d3df-42a8-b7ee-38f243c88838</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
